# docs/swagger.json
@@ -43,7 +43,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "SSE 流式响应，每帧为一个 ChatSSEResp",
+                        "description": "SSE 流式响应，每帧为一个 ChatResp",
                         "schema": {
                             "allOf": [
                                 {
@@ -56,7 +56,7 @@
                                             "type": "number"
                                         },
                                         "data": {
-                                            "$ref": "#/definitions/chat.ChatSSEResp"
+                                            "$ref": "#/definitions/chat.ChatResp"
                                         },
                                         "message": {
                                             "type": "string"
@@ -94,7 +94,7 @@
                                             "type": "number"
                                         },
                                         "data": {
-                                            "$ref": "#/definitions/chat.ChatWSResp"
+                                            "$ref": "#/definitions/chat.ChatResp"
                                         },
                                         "message": {
                                             "type": "string"
@@ -193,6 +193,9 @@
                     "description": "模型返回的内容",
                     "type": "string"
                 },
+                "flag": {
+                    "$ref": "#/definitions/chat.WSFlag"
+                },
                 "id": {
                     "description": "对话id",
                     "type": "string"
@@ -202,10 +205,14 @@
         "chat.ChatReq": {
             "type": "object",
             "required": [
+                "flag",
                 "messages"
             ],
             "properties": {
-                "conversation_id": {
+                "flag": {
+                    "$ref": "#/definitions/chat.WSFlag"
+                },
+                "id": {
                     "description": "会话ID，空值表示开启新对话",
                     "type": "string"
                 },
@@ -214,7 +221,7 @@
                 }
             }
         },
-        "chat.ChatSSEResp": {
+        "chat.ChatResp": {
             "type": "object",
             "properties": {
                 "api_protocol": {
@@ -255,17 +262,6 @@
                             "$ref": "#/definitions/chat.Usage"
                         }
                     ]
-                }
-            }
-        },
-        "chat.ChatWSResp": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/chat.ChatSSEResp"
-                },
-                "flag": {
-                    "$ref": "#/definitions/chat.WSFlag"
                 }
             }
         },
